# gmpxx_mkII

./: AGENTS.md  CMakeList.txt  CMakeLists.txt  Dockerfile  Dockerfile.i386  LICENSE  Makefile  README.md  STATUS.md  cmp.cpp  cpumodel.py  gmpxx_mkII.h  gmpxx_mkII.h.in  gmpxx_mkII.h.old  indent.sh  mpf_class.h  mpf_class_mkII.h  test_env.cpp  test_gmpxx_defaults.cpp  test_gmpxx_mkII.cpp  test_mpf_class_mkII.cpp
benchmarks/: 00_Rdot.cpp  00_Rdot_native.cpp  01_Raxpy.cpp  01_Raxpy_native.cpp  02_Rgemv.cpp  02_Rgemv_native.cpp  03_Rgemm.cpp  03_Rgemm_native.cpp  CMakeLists.txt  README.md  benchmark_kernels.hpp  native_kernels.hpp  plot.py  run_benchmarks.sh
benchmarks/00_Rdot/: README.md  Rdot.hpp  Rdot_gmp_C_native_01.cpp  Rdot_gmp_C_native_openmp_01.cpp  Rdot_gmp_kernel_01.cpp  Rdot_gmp_kernel_02.cpp  Rdot_gmp_kernel_03.cpp  Rdot_gmp_kernel_04.cpp  Rdot_gmp_kernel_openmp_01.cpp  Rdot_gmp_kernel_openmp_02.cpp  go.sh  go_perf.sh  go_small.sh  log.00_Rdot.Linux.Core_i9-13900K  log.00_Rdot.Linux.Ryzen_3970X_32-Core  log.00_Rdot.Linux.Ryzen_9_7950X_16-Core  log.00_Rdot.Linux.Xeon_Max_9480  log.Linux.00_Rdot.Ryzen_3970X_32-Core  log.Linux.Corei9_13900K_small  log.Linux.Ryzen3970X  log.Linux.Ryzen3970X.perf  log.Linux.Ryzen3970X.profiled  log.Linux.Ryzen3970X_small  log.Linux.Ryzen7950X_small  log.Linux.XeonPlatinum8480p_small  plot.py  report_Rdot_gmp_C_native_01.txt  report_Rdot_gmp_C_native_openmp_01.txt  report_Rdot_gmp_kernel_01_mkII.txt  report_Rdot_gmp_kernel_01_mkIISR.txt  report_Rdot_gmp_kernel_01_orig.txt  report_Rdot_gmp_kernel_02_mkII.txt  report_Rdot_gmp_kernel_02_mkIISR.txt  report_Rdot_gmp_kernel_02_orig.txt  report_Rdot_gmp_kernel_03_mkII.txt  report_Rdot_gmp_kernel_03_mkIISR.txt  report_Rdot_gmp_kernel_03_orig.txt  report_Rdot_gmp_kernel_04_mkII.txt  report_Rdot_gmp_kernel_04_mkIISR.txt  report_Rdot_gmp_kernel_04_orig.txt  (+13 more)
benchmarks/00_inner_product/: go.sh  go_perf.sh  go_small.sh  gprof_inner_product_gmp_10_naive.txt  gprof_inner_product_gmp_11_openmp.txt  gprof_inner_product_gmp_12_mpblas_compat.txt  gprof_inner_product_gmp_12_mpblas_mkII.txt  gprof_inner_product_gmp_12_mpblas_mkIISR.txt  gprof_inner_product_gmp_12_mpblas_orig.txt  gprof_inner_product_gmp_13_mpblas_openmp_compat.txt  gprof_inner_product_gmp_13_mpblas_openmp_mkII.txt  gprof_inner_product_gmp_13_mpblas_openmp_mkIISR.txt  gprof_inner_product_gmp_13_mpblas_openmp_orig.txt  inner_product_gmp_10_naive  inner_product_gmp_10_naive.cpp  inner_product_gmp_11_openmp.cpp  inner_product_gmp_12_0_mpblas.cpp  inner_product_gmp_12_1_mpblas.cpp  inner_product_gmp_12_2_mpblas.cpp  inner_product_gmp_12_mpblas.cpp  inner_product_gmp_13_mpblas_openmp.cpp  inner_product_gmp_kernel_01.cpp  inner_product_gmp_kernel_openmp_01.cpp  log.Linux.Ryzen3970X  log.Linux.Ryzen3970X.perf  log.Linux.Ryzen3970X.profiled  log.Linux.Ryzen3970X_small  log.Linux.XeonPlatinum8480p  plot.py  report_inner_product_gmp_10_naive.txt  report_inner_product_gmp_11_openmp.txt  report_inner_product_gmp_12_0_mpblas_mkII.txt  report_inner_product_gmp_12_0_mpblas_mkIISR.txt  report_inner_product_gmp_12_0_mpblas_orig.txt  report_inner_product_gmp_12_1_mpblas_mkII.txt  report_inner_product_gmp_12_1_mpblas_mkIISR.txt  report_inner_product_gmp_12_1_mpblas_orig.txt  report_inner_product_gmp_12_2_mpblas_mkII.txt  report_inner_product_gmp_12_2_mpblas_mkIISR.txt  report_inner_product_gmp_12_2_mpblas_orig.txt  (+20 more)
benchmarks/01_Raxpy/: README.md  Raxpy.hpp  Raxpy_gmp_C_native_01.cpp  Raxpy_gmp_C_native_openmp_01.cpp  Raxpy_gmp_kernel_01.cpp  Raxpy_gmp_kernel_02.cpp  Raxpy_gmp_kernel_openmp_01.cpp  Raxpy_gmp_kernel_openmp_02.cpp  go.sh  log.01_Raxpy.Linux.Core_i9-13900K  log.01_Raxpy.Linux.Ryzen_3970X_32-Core  log.01_Raxpy.Linux.Ryzen_9_7950X_16-Core  log.01_Raxpy.Linux.Xeon_Max_9480  log.Linux.01_Raxpy.Ryzen_3970X_32-Core  log.Linux.Ryzen3970X  plot.py
benchmarks/02_Rgemv/: README.md  Rgemv.hpp  Rgemv_gmp_C_native_01.cpp  Rgemv_gmp_C_native_openmp_01.cpp  Rgemv_gmp_kernel_01.cpp  Rgemv_gmp_kernel_02.cpp  Rgemv_gmp_kernel_openmp_01.cpp  Rgemv_gmp_kernel_openmp_02.cpp  go.sh  log.02_Rgemv.Linux.Core_i9-13900K  log.02_Rgemv.Linux.Ryzen_3970X_32-Core  log.02_Rgemv.Linux.Ryzen_9_7950X_16-Core  log.02_Rgemv.Linux.Xeon_Max_9480  log.Linux.02_Rgemv.Ryzen_3970X_32-Core  log.Linux.Ryzen3970X  plot.py
benchmarks/03_Rgemm/: README.md  Rgemm.hpp  Rgemm_gmp_C_native_01.cpp  Rgemm_gmp_C_native_02.cpp  Rgemm_gmp_C_native_openmp_01.cpp  Rgemm_gmp_C_native_openmp_02.cpp  Rgemm_gmp_kernel_01.cpp  Rgemm_gmp_kernel_02.cpp  Rgemm_gmp_kernel_03.cpp  Rgemm_gmp_kernel_openmp_01.cpp  Rgemm_gmp_kernel_openmp_02.cpp  Rgemm_gmp_kernel_openmp_03.cpp  gemm_gmp_11_naive_jli.cpp  gemm_gmp_20_mpblas.cpp  gemm_gmp_21_mpblas_openmp.cpp  gemm_gmp_30_mpblaslike_naive_ijl.cpp  go.sh  log.Linux.3970X  (+10 more)
examples/: CMakeLists.txt  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp
tests/: CMakeLists.txt  test_abi_fingerprint.cpp  test_alias_safety.cpp  test_alloc_count.cpp  test_basic.cpp  test_comparisons.cpp  test_compound_assign.cpp  test_construction_copy.cpp  test_defaults_policy.cpp  test_exception_support.cpp  test_gmpxx_mkII.cpp  test_headers.cpp  test_io_and_strings.cpp  test_long_width_dispatch.cpp  test_mixed_type_arithmetic.cpp  test_mpf_basic.cpp  test_mpf_construction_copy.cpp  test_mpf_extended_transcendent_functions.cpp  test_mpf_math_functions.cpp  test_mpf_transcendent_functions.cpp  test_mpfc_arithmetic.cpp  test_mpfc_io.cpp  test_mpfc_transcendent_functions.cpp  test_mpq_arithmetic.cpp  test_mpq_basic.cpp  test_mpz_addmul_alloc_count.cpp  test_mpz_addmul_fusion.cpp  test_mpz_arithmetic.cpp  test_mpz_mpq_alloc_count.cpp  test_numeric_equivalence.cpp  test_power_of_two_fusion.cpp  test_precision_policy.cpp  test_random.cpp  test_scalar_alloc_count.cpp  test_scalar_arithmetic.cpp  test_thread_safety.cpp  test_type_conversions.cpp  test_unary_minus_simplification.cpp  test_user_defined_literals.cpp
(+54 files in other folders)
